--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Distributed client.",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack-dev-server --config ./webpack.config.js --mode development",
+    "dev": "webpack-dev-server --config ./webpack.config.js --mode development & open http://localhost:8080/",
     "test": "echo \"No test specified\" && exit 0"
   },
   "keywords": [],
