--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Distributed client.",
   "main": "index.js",
   "scripts": {
-    "build": "NODE_ENV=production webpack --progress --bail",
+    "build": "NODE_ENV=production webpack --config ./webpack-build.config.js --mode production --progress --bail",
     "dev": "webpack-dev-server --config ./webpack.config.js --mode development & open http://localhost:8080/",
     "test": "echo \"No test specified\" && exit 0"
   },
